# winapi-history

./: Cargo.toml  README.md
.github/workflows/: build.yml
db/: icons.sql  meta_funcs.sql  release_dates.sql  schema.sql
db/migrations/: r0001_to_r0002.sql  r0002_to_r0003.sql
whload/: Cargo.toml
whload/src/: main.rs  ms_cpp_filt.rs
winapi-history-web/: Cargo.toml
winapi-history-web/icons/dev/: nt3_1.xcf  nt3_51.xcf  wfw3_1.xcf  win1_01.xcf  win1_04.xcf  win2_03.xcf  win3_1.xcf  win7.xcf  win98.xcf
winapi-history-web/src/: main.rs
winapi-history-web/static/os-icons/dev/: nt3_5.xcf  nt4_0.xcf  wfw3_11.xcf  win10.xcf  win1_01.xcf  win1_04.xcf  win2_03.xcf  win2k.xcf  win2kp_rtm.xcf  win2kp_sp4.xcf  win3_0.xcf  win95.xcf  win95a.xcf  win95b.xcf  win95c.xcf  win98se.xcf  winme.xcf  winxp_rtm.xcf  winxp_sp1a.xcf  winxp_sp2.xcf  winxp_sp3.xcf
winapi-history-web/templates/: _base.html  _macros.html  alpha-dll-list.html  alpha-sym-list.html  compare-os-dll.html  compare-os.html  dll.html  os-dll-sym-list.html  os-sym-list.html  os.html  root.html  symbol.html
