[package]
name = "whload"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
msvc-demangler = { version = "0.11", optional = true }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = { version = "1.0" }

[features]
default = ["ms_cpp_filt"]
ms_cpp_filt = ["dep:msvc-demangler"]
