[package]
name = "winapi-history-web"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14" }
clap = { version = "4.5", features = ["derive"] }
http-body-util = { version = "0.1" }
hyper = { version = "1.6" }
hyper-util = { version = "0.1" }
rusqlite = { version = "0.37" }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
