[package]
name = "winapi-history-web"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14" }
clap = { version = "4.5", features = ["derive"] }
rocket = { version = "0.5" }
rusqlite = { version = "0.37" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
